--- a/giftcard.html
+++ b/giftcard.html
@@ -1,71 +1,71 @@
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/giftcard.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
-    <link href="https://db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold"
-      rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
 
-  <body>
-    <div class="navigation">
-        <div class="symbol" id="symbol"></div>
-        <div class="navi-1">
-          <nav>
-            <ul>
-              <li><a class="ar" href="./menu.html">Menu</a></li>
-              <li><a class="ar" href="./delivery.html">Delivery</a></li>
-              <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="navi-2">
-          <div class="button">
-          <button class="signin"><a href="./signin.html"></a> Sign in</button> 
-           <button class="joinnow"> Join now</button>
-          </div>
-          <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
-        </div>
-      </div>
-      <div class="page-1">
-        </div>
-    <div class="container-card">
-      <div class="card1" style="width: 18rem">
-        <img
-          src="https://i.pinimg.com/originals/17/63/54/1763542d8b1b9f796359baa2b8c9dfa8.gif"
-          class="card-top"
-          alt="..."
-        />
-      </div>
-      <div class="card1" style="width: 18rem">
-        <img
-          src="https://i.pinimg.com/originals/17/63/54/1763542d8b1b9f796359baa2b8c9dfa8.gif"
-          class="card-top"
-          alt="..."
-        />
-      </div>
-      <div class="card1" style="width: 18rem">
-        <img
-          src="https://i.pinimg.com/originals/17/63/54/1763542d8b1b9f796359baa2b8c9dfa8.gif"
-          class="card-top"
-          alt="..."
-        />
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./styles/giftcard.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <div class="navigation1">
+    <div class="symbol" id="symbol"></div>
+    <div class="navi-1-1">
+      <nav>
+        <ul>
+          <li><a class="arr" href="./menu.html">Menu</a></li>
+          <li><a class="arr" href="./delivery.html">Delivery</a></li>
+          <li><a class="arr" href="./giftcard.html">Gift Cards</a></li>
+        </ul>
+      </nav>
     </div>
-    
+    <div class="navi-2-2">
+      <div class="buttonn">
+        <button class="signinn"><a href="./signin.html"></a> Sign in</button>
+        <button class="joinnoww"> Join now</button>
+      </div>
+      <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
+    </div>
+  </div>
+  <div class="page-1">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="https://globalassets.starbucks.com/digitalassets/cards/fy24/ConfettiCelebrationFY24.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
 
 
-    <script src="./js/giftcard.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+      <script src="./js/giftcard.js"></script>
 </body>
+
 </html>
