--- a/menu.html
+++ b/menu.html
@@ -1,162 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/menu.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-  </head>
 
-  <body>
-    <div class="container-all">
-      <div class="container-1">
-        <div class="navigation">
-          <div class="symbol" id="symbol"></div>
-          <div class="navi-1">
-            <nav>
-              <ul>
-                <li><a class="ar" href="./menu.html">Menu</a></li>
-                <li><a class="ar" href="./delivery.html">Delivery</a></li>
-                <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
-              </ul>
-            </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="styles/menu.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+</head>
+
+<body>
+  <div class="container-all">
+    <div class="container-1">
+      <div class="navigation">
+        <div class="symbol" id="symbol"></div>
+        <div class="navi-1">
+          <nav>
+            <ul>
+              <li><a class="ar" href="./menu.html">Menu</a></li>
+              <li><a class="ar" href="./delivery.html">Delivery</a></li>
+              <li><a class="ar" href="./giftcard.html">Gift Cards</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="navi-2">
+          <div class="button">
+            <button class="signin" id="signin">Sign in</button>
+            <button class="joinnow"> Join now</button>
           </div>
-          <div class="navi-2">
-            <div class="button">
-              <button class="signin" id="signin">Sign in</button>
-              <button class="joinnow"> Join now</button>
+          <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
+        </div>
+      </div>
+      <div class="page-1">
+        <div class="list">
+          <div class="top-list">
+            <div class="top-1">
+              <div class="title-top">
+                <b> Drinks </b>
+              </div>
+              <div class="text">
+                <p>Frappuccino® Blended Beverages</p>
+                <p>Iced Coffee & Cold Brew</p>
+                <p>Starbucks Refresha® Drink</p>
+                <p>Iced Tea</p>
+              </div>
+              <div class="title">
+                <b> Food </b>
+              </div>
+              <div class="text">
+                <p>Breakfast</p>
+                <p>Bakery Treats</p>
+              </div>
             </div>
-            <div class="store"><i class="fa-solid fa-cart-shopping"></i></div>
+          </div>
+          <div class="top-list">
+            <div class="title">
+              <b>At Home Coffee</b>
+            </div>
+            <div class="text">
+              <p>VIA® Instant</p>
+            </div>
+          </div>
+          <div class="top-list">
+            <div class="title">
+              <b>Merchandise</b>
+            </div>
+            <div class="text">
+              <p>Cold Cups</p>
+            </div>
           </div>
         </div>
-        <div class="page-1">
-          <div class="list">
-            <div class="top-list">
-              <div class="top-1">
-                <div class="title-top">
-                  <b> Drinks </b>
+        <div class="parents">
+          <div class="product-list">
+            <!-- <template id="product-template"> -->
+            <h4 id="product-type">Drinks</h4>
+            <hr />
+            <div class="wrapper" id="product-list">
+              <template id="product-template">
+                <div class="circle">
+                  <img id="product-image" class="card-img-top"
+                    src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                    alt="" />
+                  <div id="product-title" class="circle-title">Coffee</div>
                 </div>
-                <div class="text">
-                  <p>Frappuccino® Blended Beverages</p>
-                  <p>Iced Coffee & Cold Brew</p>
-                  <p>Starbucks Refresha® Drink</p>
-                  <p>Iced Tea</p>
-                </div>
-                <div class="title">
-                  <b> Food </b>
-                </div>
-                <div class="text">
-                  <p>Breakfast</p>
-                  <p>Bakery Treats</p>
-                </div>
-              </div>
-            </div>
-            <div class="top-list">
-              <div class="title">
-                <b>At Home Coffee</b>
-              </div>
-              <div class="text">
-                <p>VIA® Instant</p>
-              </div>
-            </div>
-            <div class="top-list">
-              <div class="title">
-                <b>Merchandise</b>
-              </div>
-              <div class="text">
-                <p>Cold Cups</p>
-              </div>
+              </template>
             </div>
           </div>
-          <div class="parents">
-            <div class="product-list">
-              <!-- <template id="product-template"> -->
-              <h4 id="product-type">Drinks</h4>
-              <hr />
-              <div class="wrapper" id="product-list">
-                <template id="product-template">
-                  <div class="circle">
-                    <img
-                      id="product-image"
-                      class="card-img-top"
-                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
-                      alt=""
-                    />
-                    <div id="product-title" class="circle-title">Coffee</div>
-                  </div>
-                </template>
-              </div>
+          <div class="product-list1">
+            <!-- <template id="product-template"> -->
+            <h4 id="product-type">Food</h4>
+            <hr />
+            <div class="wrapper" id="product-lis">
+              <template id="product-templat">
+                <div class="circle">
+                  <img id="product-imag" class="card-img-top"
+                    src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                    alt="" />
+                  <div id="product-titl" class="circle-title">Coffee</div>
+                </div>
+              </template>
             </div>
-            <div class="product-list1">
-              <!-- <template id="product-template"> -->
-              <h4 id="product-type">Food</h4>
-              <hr />
-              <div class="wrapper" id="product-lis">
-                <template id="product-templat">
-                  <div class="circle">
-                    <img
-                      id="product-imag"
-                      class="card-img-top"
-                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
-                      alt=""
-                    />
-                    <div id="product-titl" class="circle-title">Coffee</div>
-                  </div>
-                </template>
-              </div>
+          </div>
+          <div class="product-list1">
+            <h4 id="product-type"> At Home Coffee</h4>
+            <hr />
+            <div class="wrapper" id="product-list1">
+              <template id="product-template1">
+                <div class="circle">
+                  <img id="product-image1" class="card-img-top"
+                    src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                    alt="" />
+                  <div id="product-title1" class="circle-title">Coffee</div>
+                </div>
+              </template>
             </div>
-            <div class="product-list1">
-              <h4 id="product-type"> At Home Coffee</h4>
-              <hr />
-              <div class="wrapper" id="product-list1">
-                <template id="product-template1">
-                  <div class="circle">
-                    <img
-                      id="product-image1"
-                      class="card-img-top"
-                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
-                      alt=""
-                    />
-                    <div id="product-title1" class="circle-title">Coffee</div>
-                  </div>
-                </template>
-              </div>
-            </div>
-            <div class="product-list1">
-              <h4 id="product-type"> Merchandise</h4>
-              <hr />
-              <div class="wrapper" id="product-list2">
-                <template id="product-template2">
-                  <div class="circle">
-                    <img
-                      id="product-image2"
-                      class="card-img-top"
-                      src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
-                      alt=""
-                    />
-                    <div id="product-title2" class="circle-title">Coffee</div>
-                  </div>
-                </template>
-              </div>
+          </div>
+          <div class="product-list1">
+            <h4 id="product-type"> Merchandise</h4>
+            <hr />
+            <div class="wrapper" id="product-list2">
+              <template id="product-template2">
+                <div class="circle">
+                  <img id="product-image2" class="card-img-top"
+                    src="https://www.digitalassets.starbucks.eu/sites/starbucks-medialibrary/files/assets/a41e9afa349af0c2c601b0f5569b93a8_0.jpg"
+                    alt="" />
+                  <div id="product-title2" class="circle-title">Coffee</div>
+                </div>
+              </template>
             </div>
           </div>
         </div>
@@ -164,6 +142,8 @@
     </div>
 
 
-    <script src="js/menu.js"></script>
-  </body>
+
+  <script src="js/menu.js"></script>
+</body>
+
 </html>
