--- a/card_detail.html
+++ b/card_detail.html
@@ -22,7 +22,7 @@
 <body>
   <div class="container">
     <div class="navigation">
-      <div class="symbol" id="symbol"></div>
+      <div class="symbol" id="symbol"> <a href="./index.html"></a></div>
       <div class="navi-1">
         <nav>
           <ul>
@@ -118,7 +118,8 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
-  <script src="./js/preferences.js"></script>
+  <script src="./js/card_detail.js"></script>
+  
 </body>
 
 </html>
