--- a/giftcard.html
+++ b/giftcard.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-  <div class="navigation1">
-    <div class="symbol" id="symbol"></div>
+  <div class="navigation">
+    <div class="symbol" id="symbol"><a href="./index.html"></a></div>
     <div class="navi-1">
       <nav>
         <ul>
@@ -31,7 +31,7 @@
       </nav>
     </div>
     <div class="navi-2">
-      <div class="buttonn">
+      <div class="button">
         <button class="signin"><a href="./signin.html"></a> Sign in</button>
         <button class="joinnoww"> Join now</button>
       </div>
@@ -39,55 +39,63 @@
     </div>
   </div>
   <div class="page-1">
-    
+    <div class="featured-card">
+      <div class="featured-title"> FEATURED</div>
+      <div class="container-featured">
+        <div class="card featured-card1" id="card"><a href="./card_detail.html"></a></div>
+        <div class="card featured-card2" id="card"></div>
+        <div class="card featured-card3" id="card"></div>
+        <div class="card featured-card4" id="card"></div>
+      </div>
+    </div>
+    <div class="card-receive">
+      <div class="receive-text">Receive a Gift Card Today!</div>
+      <div class="receive-text1">Earns 2★Stars per $1</div>
+      <Div class="two-button">
+        <button class="add"> Add or reload</button>
+        <button class="balance"> Check balance</button>
+      </Div>
 
-<ul class="cards">
-  <li class="cards__item">
-    <div class="card">
-      <div class="card__image card__image--fence"></div>
-      <div class="card__content">
-        <div class="card__title">Flex</div>
-        <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink and flex-basis) are optional. Default is 0 1 auto. </p>
-        <button class="btn btn--block card__btn">Button</button>
+    </div>
+    <div class="featured-card ">
+      <div class="featured-title"> LUNAR NEW YEAR | 2/10</div>
+      <div class="container-featured">
+        <div class="card featured-card3" id="card"></div>
       </div>
     </div>
-  </li>
-  <li class="cards__item">
-    <div class="card">
-      <div class="card__image card__image--river"></div>
-      <div class="card__content">
-        <div class="card__title">Flex Grow</div>
-        <p class="card__text">This defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.</p>
-        <button class="btn btn--block card__btn">Button</button>
+    <div class="gap"></div>
+    <div class="featured-card bottom-card">
+      <div class="featured-title" > VALENTINE | 14/2</div>
+      <div class="container-featured">
+        <div class="card featured-card6" id="card"></div>
+        <div class="card featured-card7" id="card"></div>
       </div>
     </div>
-  </li>
-  <li class="cards__item">
-    <div class="card">
-      <div class="card__image card__image--record"></div>
-      <div class="card__content">
-        <div class="card__title">Flex Shrink</div>
-        <p class="card__text">This defines the ability for a flex item to shrink if necessary. Negative numbers are invalid.</p>
-        <button class="btn btn--block card__btn">Button</button>
+    <div class="gap"></div>
+    <div class="featured-card bottom-card">
+      <div class="featured-title"> BIRTHDAY</div>
+      <div class="container-featured">
+        <div class="card featured-card8" id="card" ></div>
+        <div class="card featured-card9" id="card"></div>
+        <div class="card featured-card10"id="card"></div>
       </div>
     </div>
-  </li>
-  <li class="cards__item">
-    <div class="card">
-      <div class="card__image card__image--flowers"></div>
-      <div class="card__content">
-        <div class="card__title">Flex Basis</div>
-        <p class="card__text">This defines the default size of an element before the remaining space is distributed. It can be a length (e.g. 20%, 5rem, etc.) or a keyword. The auto keyword means "look at my width or height property."</p>
-        <button class="btn btn--block card__btn">Button</button>
+    <div class="gap"></div>
+    <div class="featured-card bottom-card">
+      <div class="featured-title"> AFFECTION</div>
+      <div class="container-featured">
+        <div class="card featured-card11" id="card"></div>
+        <div class="card featured-card12" id="card"></div>
+        <div class="card featured-card13" id="card"></div>
+        <div class="card featured-card14" id="card"></div>
       </div>
     </div>
-  </li>
-</ul>
-      </div>
+  </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-      <script src="./js/giftcard.js"></script>
-      <script src="https://swiperjs.com/demos#navigation"></script>
+
+  <script src="./js/giftcard.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
