--- a/styles/auth.html
+++ b/styles/auth.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width-device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="sie-edge" />
     <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles/signin.css">
+    <link rel="stylesheet" type="text/css" href="./styles/signin.css">
     <link rel="stylesheet" href="signin.css">
     <title> Auth </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -83,8 +83,6 @@
     <script src="./js/auth.js"></script>
     <script src="./js/switch.js"></script>
     <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
