--- a/delivery.html
+++ b/delivery.html
@@ -42,53 +42,44 @@
         </div>
       </div>
       <div class="page-1">
-        <div class="fixed-image">
-        </div>
         <div class="right">
-          <div class="right-fixed-image">
-            <img class="style-img"
-              src="https://www.starbucks.co.uk/sites/starbucks-uk/files/styles/c02_horizontal_card_1335x534/public/2022-03/11312197-STARBUCKS-SBUX-DELIVERS-STARBUCKS_WEBSITE-BAG_AND_GRANDE-1133x476px-GREEN.jpg.webp?itok=qQ4Zl330">
+          <div class="right-fixed-image"></div>
+          <div class="bottom-deliver">
+            <div class="step-deliver">
+              <Div class="step1">
+                <div class="step1-img">
+                  <img class="delivery-img"
+                    src="https://www.starbucks.com/weblx/images/rewards/benefits/1-fun-freebies.jpg">
+                </div>
+                <div class="step1-title">
+                  Order on the app
+                </div>
+              </Div>
+              <Div class="step1">
+                <div class="step1-img">
+                  <img class="delivery-img"
+                    src="https://www.starbucks.com/weblx/images/rewards/benefits/2-order-and-pay-ahead.jpg">
+                </div>
+                <div class="step1-title">
+                  Earn stars
+                </div>
+              </Div>
+              <Div class="step1">
+                <div class="step1-img">
+                  <img class="delivery-img"
+                    src="https://www.starbucks.com/weblx/images/rewards/benefits/3-get-to-free-faster.jpg">
+                </div>
+                <div class="step1-title">
+                  Enjoy !!!
+                </div>
+              </Div>
+            </div>
+            <div class="step2">
+              <video   height = "269px" width =  "600px" autoplay controls="false">
+                <source src="https://www.starbucks.com.au/assets/uploads/2023/12/Star-Rewards-Intro-Tile.mp4" type="video/mp4"
+              </video>
+            </div>
           </div>
-          <div class="step-deliver">
-            <Div class="step1">
-              <div class="step1-img">
-                <img class="delivery-img"
-                  src="https://www.starbucks.com/weblx/images/rewards/benefits/1-fun-freebies.jpg">
-              </div>
-              <div class="step1-title">
-                Order on the app
-              </div>
-            </Div>
-            <Div class="step1">
-              <div class="step1-img">
-                <img class="delivery-img"
-                  src="https://www.starbucks.com/weblx/images/rewards/benefits/2-order-and-pay-ahead.jpg">
-              </div>
-              <div class="step1-title">
-                Earn stars
-              </div>
-            </Div>
-            <Div class="step1">
-              <div class="step1-img">
-                <img class="delivery-img"
-                  src="https://www.starbucks.com/weblx/images/rewards/benefits/3-get-to-free-faster.jpg">
-              </div>
-              <div class="step1-title">
-                Enjoy !!!
-              </div>
-            </Div>
-          </div>
-        </div>
-      </div>
-      <div class="page-2">
-        <div class="partner-title">
-
-        </div>
-        <div class="partner-container">
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
         </div>
       </div>
       <div class="footer">
@@ -155,6 +146,7 @@
   </div>
 
   <script src="./js/delivery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
     crossorigin="anonymous"></script>
 </body>
